--- a/sangee-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/sangee-pet-clinic/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8"/>
     <title>Vets</title>
 </head>
 <body>
-<h1>Vets</h1>
+<h2>Vets</h2>
+<table id="vets" class="table table-striped">
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>FirstName</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+    	<td th:text="${vet.id}">1</td>
+        <td th:text="${vet.firstName}">John</td>
+        <td th:text="${vet.lastName}">Tater</td>
+        <td></td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
